Add zk package-require

--- a/.github/workflows/melpazoid.yml
+++ b/.github/workflows/melpazoid.yml
@@ -26,5 +26,5 @@ jobs:
         # RECIPE is your recipe as written for MELPA:
         RECIPE: (zk :repo "localauthor/zk" :fetcher github :files ("zk.el"))
         # set this to false (or remove it) if the package isn't on MELPA:
-        EXIST_OK: false
+        EXIST_OK: true
       run: echo $GITHUB_REF && make -C ~/melpazoid
