--- a/.github/workflows/melpazoid-zk-desktop.yml
+++ b/.github/workflows/melpazoid-zk-desktop.yml
@@ -24,7 +24,7 @@ jobs:
       env:
         LOCAL_REPO: ${{ github.workspace }}
         # RECIPE is your recipe as written for MELPA:
-        RECIPE: (zk-index :repo "localauthor/zk" :fetcher github :files ("zk-index.el"))
+        RECIPE: (zk-desktop :repo "localauthor/zk" :fetcher github :files ("zk-desktop.el"))
         # set this to false (or remove it) if the package isn't on MELPA:
-        EXIST_OK: true
+        EXIST_OK: false
       run: echo $GITHUB_REF && make -C ~/melpazoid
