--- a/.github/workflows/melpazoid-zk-desktop.yml
+++ b/.github/workflows/melpazoid-zk-desktop.yml
@@ -10,10 +10,11 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python 3.9
-      uses: actions/setup-python@v1
-      with: { python-version: 3.9 }
+    - uses: actions/checkout@v3
+    - name: Set up Python 3.10
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.10'
     - name: Install
       run: |
         python -m pip install --upgrade pip
@@ -24,7 +25,7 @@ jobs:
       env:
         LOCAL_REPO: ${{ github.workspace }}
         # RECIPE is your recipe as written for MELPA:
-        RECIPE: (zk-desktop :repo "localauthor/zk" :fetcher github :files ("zk-desktop.el"))
+        RECIPE: (zk-desktop :fetcher github :repo "localauthor/zk" :files ("zk-desktop.el"))
         # set this to false (or remove it) if the package isn't on MELPA:
-        EXIST_OK: false
+        EXIST_OK: true
       run: echo $GITHUB_REF && make -C ~/melpazoid
